tests/golden/type_errors/generic_explicit_wrong_arity.cd
fun identity<T>(value: T): T { return value; }
print identity<number, string>(1);
