tests/golden/type_errors/generic_explicit_wrong_arity.err
Type error at 2:33: expected 1 type arguments but got 2
  print identity<number, string>(1);
                                  ^
